--- a/style.css
+++ b/style.css
@@ -1,76 +1,21 @@
-/*
-
-reference: https://schoolity.com/SchoolUtil.css
-
-*/
-
-:root {
-    --font-family: system-ui;
-    --background-color: #fff;
-    --menu-bar-color: #ddd;
-    --side-bar-color: #eee;
-    --side-bar-color-dark: #aaa;
-    --side-bar-color-light: #ccc;
-    --tabs-color: #ccc;
+#hi body {
+	font-family: system-ui;
 }
 
-html body {
-    font-family: var(--font-family) !important;
+#hi img {
+	filter: blur(20px) grayscale(1);
 }
 
-body > * {
-    filter: grayscale(1) contrast(1.04) brightness(0.96) hue-rotate(190deg);
+#hi body * {
+	font-family: inherit;
 }
 
-/* remove clutter */
-
-html .bar,
-html .material-icons.md-dark.header-icon,
-html .rounded-photo.tablayout-thumbnail-photo,
-html .search-wrapper,
-html .tree-image-holder {
-    display: none;
+h1,
+figcaption,
+.teaser__premium-mark {
+	display: none !important;
 }
 
-html .gwt-StackLayoutPanelHeader.stackLayoutPanel-header > div {
-    right: 0 !important;
+p {
+	color: pink !important;
 }
-
-.stackLayoutPanel {
-    margin-top: 0 !important;
-}
-
-/* change color */
-
-/*html .customMenuBar,
-html .customMenuBar-top {
-    background-color: var(--menu-bar-color);
-}
-
-html .bar,
-html .stackPanelLabel,
-html .searchbox {
-    background-color: inherit;
-}
-
-html .left-panel {
-    background-color: var(--side-bar-color);
-}
-
-html .tabs-panel {
-    background-color: var(--tabs-color);
-}
-
-html .stackLayoutPanel,
-html .gwt-StackLayoutPanelHeader {
-    background-color: var(--side-bar-color-darl) !important;
-}
-
-html .gwt-StackLayoutPanel .gwt-StackLayoutPanelContent {
-    background-color: var(--side-bar-color-light);
-}
-
-
-html .background {
-    background-color: var(--background-color);
-}*/
